customized the default and 404 error pages.
git-svn-id: file:///var/www/svn/anahita/anahita/trunk@15012 a933e228-e664-4d3f-8241-49479697c698

--- a/code/site/templates/shiraz/en-GB.tpl_shiraz.ini
+++ b/code/site/templates/shiraz/en-GB.tpl_shiraz.ini
@@ -2,9 +2,5 @@
 # license http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL
 # Note : All ini files need to be saved as UTF-8
 
-TEXT_SIZE=Text Size
-DEVELOPED_BY=Designed By
-POWERED_BY=Powered By
-
-VIEWER-ACCOUNT=Account
-VIEWER-LOGOUT=Logout
+TMPL-ERROR-404-TITLE=Sorry, but we can't seem to find the page that you are looking for!
+TMPL-ERROR-404-DESC=You either do not have the right permission to view this page or the page does not exist at all. 
