--- a/code/site/templates/shiraz/en-GB.tpl_shiraz.ini
+++ b/code/site/templates/shiraz/en-GB.tpl_shiraz.ini
@@ -4,3 +4,6 @@
 
 TMPL-ERROR-404-TITLE=Sorry, but we can't seem to find the page that you are looking for!
 TMPL-ERROR-404-DESC=You either do not have the right permission to view this page or the page does not exist at all. 
+
+TMPL-ERROR-405-TITLE=Sorry, but you cant't do this!
+TMPL-ERROR-405-DESC=Looks like you asked for something that you don't have the right permissions for.
