enhanced the copyright rendering and added powered by Anahita with an option to hide it too.
git-svn-id: file:///var/www/svn/anahita/anahita/trunk@15555 a933e228-e664-4d3f-8241-49479697c698

--- a/code/site/templates/shiraz/params.ini
+++ b/code/site/templates/shiraz/params.ini
@@ -3,14 +3,13 @@ navbarInverse=0
 brandName=Anahita
 showLogo=1
 copyright=
+poweredby=1
 analytics=123
 header=4,4,4
 showcase=12
 feature=4,4,4
 utility=12
 maintop=4,4,4
-content-top=4,4,4
-content-bottom=6,6
 mainbottom=12
 bottom=4,4,4
 footer=4,4,4
